// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ActionList .action-menu prevents default when an item is clicked 1`] = `
<div
  className="action-list"
>
  

  <button
    aria-haspopup="true"
    aria-label="Action list button"
    className="action-toggle"
    id="actionListToggle"
    type="button"
  >
    

    <i
      aria-hidden={true}
      className="at-dots-vertical small"
    />
    

  </button>
  

  <div
    aria-labelledby="actionListToggle"
    className="action-menu"
  >
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-bookmark-star small"
      />
      Add bookmark
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-business-suitcase small"
      />
      Add client
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-plus-circle small"
      />
      Add document
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-user-plus small"
      />
      Add user
    </a>
    

  </div>
</div>
`;

exports[`Component: ActionList prop types items prints an error if it does not contain objects 1`] = `
<div
  className="action-list"
>
  

  <button
    aria-haspopup="true"
    aria-label="Action list button"
    className="action-toggle"
    id="actionListToggle"
    type="button"
  >
    

    <i
      className="material-icons"
    >
      more_vert
    </i>
    

  </button>
  

  <div
    aria-labelledby="actionListToggle"
    className="action-menu"
  >
    

    <a
      href="#"
      onClick={[Function]}
    />
    

  </div>
</div>
`;

exports[`Component: ActionList prop types items prints an error if it is not provided 1`] = `
Array [
  <div
    className="action-list"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

    </div>
  </div>,
  <div
    className="action-list"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
]
`;

exports[`Component: ActionList prop types prints a warning if prop classnames !== string 1`] = `
Array [
  <div
    className="action-list 2"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
  <div
    className="action-list test-class"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
]
`;

exports[`Component: ActionList prop types prints a warning if prop id !== string 1`] = `
Array [
  <div
    className="action-list"
    id={1}
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
  <div
    className="action-list"
    id="test-id"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
]
`;

exports[`Component: ActionList prop types prints a warning if prop items !== array 1`] = `
Array [
  <div
    className="action-list"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

    </div>
  </div>,
  <div
    className="action-list"
  >
    

    <button
      aria-haspopup="true"
      aria-label="Action list button"
      className="action-toggle"
      id="actionListToggle"
      type="button"
    >
      

      <i
        className="material-icons"
      >
        more_vert
      </i>
      

    </button>
    

    <div
      aria-labelledby="actionListToggle"
      className="action-menu"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          bookmark
        </i>
        Add bookmark
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          business_center
        </i>
        Add client
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          add_circle
        </i>
        Add document
      </a>
      

      <a
        href="#"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="material-icons"
        >
          person_add
        </i>
        Add user
      </a>
      

    </div>
  </div>,
]
`;

exports[`Component: ActionList renders with a custom .action-toggle if it is provided 1`] = `
<div
  className="action-list"
>
  

  <a
    className="action-toggle"
    href="#"
  >
    Custom action-toggle
  </a>
  

  <div
    aria-labelledby="actionListToggle"
    className="action-menu"
  >
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-bookmark-star small"
      />
      Add bookmark
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-business-suitcase small"
      />
      Add client
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-plus-circle small"
      />
      Add document
    </a>
    

    <a
      href="#"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="at-user-plus small"
      />
      Add user
    </a>
    

  </div>
</div>
`;
